--- a/app/src/main/res/layout/movie_trailer.xml
+++ b/app/src/main/res/layout/movie_trailer.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:gravity="center_vertical"
+android:minHeight="?android:attr/listPreferredItemHeight"
+android:orientation="horizontal">
+
+<FrameLayout
+    android:layout_width="60dp"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/list_item_icon"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/ic_action"/>
+
+</FrameLayout>
+
+<LinearLayout
+    android:layout_height="wrap_content"
+    android:layout_width="0dp"
+    android:layout_weight="7"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/list_item_forecast_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:layout_gravity="center_horizontal"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="Trailer 1"/>
+</LinearLayout>
+
 
 </LinearLayout>
