--- a/app/src/main/res/layout/movie_trailer.xml
+++ b/app/src/main/res/layout/movie_trailer.xml
@@ -26,7 +26,7 @@ android:orientation="horizontal">
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/list_item_forecast_textview"
+        android:id="@+id/trailer_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
