--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
-        android:layout_weight="0"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
@@ -35,7 +35,8 @@
             android:id="@+id/poster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:contentDescription="@string/poster" />
 
         <LinearLayout
             android:layout_width="match_parent"
