--- a/app/src/main/res/layout/new_activity_movie_details.xml
+++ b/app/src/main/res/layout/new_activity_movie_details.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true"
-    android:scrollbarStyle="insideInset"
-    android:scrollbars="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -17,12 +15,18 @@
     <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieTrailerFragment"
         android:id="@+id/movie_trailer"
         android:layout_weight="2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <View
+        android:id="@+id/separator2"
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#2d2716" />
+
     <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieReviewFragment"
         android:id="@+id/movie_reviews"
         android:layout_weight="2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
 </ScrollView>
