--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -35,12 +35,16 @@
             android:id="@+id/poster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
             android:layout_weight="1"
+            android:scaleType="fitCenter"
             android:contentDescription="@string/poster" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -57,6 +61,16 @@
                 android:layout_height="wrap_content"
                 android:text="Small Text"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <Button xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/addMovieAsFavorite"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/favorite_button"
+                android:onClick="addMovieAsFavorite"
+                android:background="#24ffdf"
+                android:textColor="#4f0f1a0b" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -75,27 +89,6 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="6dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
 
-        <View
-            android:id="@+id/separator"
-            android:layout_width="match_parent"
-            android:layout_height="1dip"
-            android:background="#2d2716" />
-
-        <TextView
-            android:id="@+id/heading_trailer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/trailer_Fragment_heading"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-
-    </LinearLayout>
 
 </LinearLayout>
