--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,11 +3,13 @@
     <string-array name="movie_sort_by">
         <item>@string/movie_sort_popular</item>
         <item>@string/movie_sort_highest_rated</item>
+        <item>@string/movie_sort_favourite</item>
     </string-array>
 
     <string-array name="movie_sort_by_values">
         <item>@string/movie_sort_popular</item>
         <item>@string/movie_sort_highest_rated</item>
+        <item>@string/movie_sort_favourite</item>
     </string-array>
 
 </resources>
