--- a/app/src/main/res/layout/new_activity_movie_details.xml
+++ b/app/src/main/res/layout/new_activity_movie_details.xml
@@ -9,13 +9,14 @@
     android:layout_height="match_parent">
     <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieDetailsActivityFragment"
         android:id="@+id/movie_details"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"/>
     <View
         android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="1dip"
+        android:paddingTop="@dimen/activity_horizontal_margin"
         android:background="#2d2716" />
 
     <TextView
@@ -23,13 +24,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/trailer_Fragment_heading"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieTrailerFragment"
         android:id="@+id/movie_trailer"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"/>
     <View
         android:id="@+id/separator2"
         android:layout_width="match_parent"
@@ -40,12 +42,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/review_Fragment_heading"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
     <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieReviewFragment"
         android:id="@+id/movie_reviews"
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
