--- a/app/src/main/res/layout/movie_trailer.xml
+++ b/app/src/main/res/layout/movie_trailer.xml
@@ -11,12 +11,12 @@
         android:orientation="horizontal">
 
 
-        <ImageView
-            android:id="@+id/list_item_icon"
-            android:layout_width="wrap_content"
+        <Button xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/youtube_id"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:background="@mipmap/ic_action" />
-
+            android:onClick="playTrailer"
+            android:background="@mipmap/ic_action"/>
 
         <TextView
             android:id="@+id/trailer_count"
