--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,7 +1,54 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/movie_details"
-    android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieDetailsActivityFragment"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout="@layout/fragment_movie_details" />
+    android:fillViewport="true">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieDetailsActivityFragment"
+        android:id="@+id/movie_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"/>
+    <View
+        android:id="@+id/separator"
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:paddingTop="@dimen/activity_horizontal_margin"
+        android:background="#2d2716" />
+
+    <TextView
+        android:id="@+id/heading_trailer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/trailer_Fragment_heading"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieTrailerFragment"
+        android:id="@+id/movie_trailer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"/>
+    <View
+        android:id="@+id/separator2"
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#2d2716" />
+    <TextView
+        android:id="@+id/heading_reviews1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/review_Fragment_heading"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
+    <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieReviewFragment"
+        android:id="@+id/movie_reviews"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
+</ScrollView>
