--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -3,52 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieDetailsActivityFragment"
-        android:id="@+id/movie_details"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"/>
-    <View
-        android:id="@+id/separator"
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:paddingTop="@dimen/activity_horizontal_margin"
-        android:background="#2d2716" />
+        android:layout_height="match_parent">
+        <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieDetailsActivityFragment"
+            android:id="@+id/movie_poster_syno_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"/>
+        <View
+            android:id="@+id/separator"
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:background="#2d2716" />
 
-    <TextView
-        android:id="@+id/heading_trailer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/trailer_Fragment_heading"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        <TextView
+            android:id="@+id/heading_trailer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/trailer_Fragment_heading"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieTrailerFragment"
-        android:id="@+id/movie_trailer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"/>
-    <View
-        android:id="@+id/separator2"
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="#2d2716" />
-    <TextView
-        android:id="@+id/heading_reviews1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/review_Fragment_heading"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieTrailerFragment"
+            android:id="@+id/movie_trailer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"/>
+        <View
+            android:id="@+id/separator2"
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="#2d2716" />
+        <TextView
+            android:id="@+id/heading_reviews1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/review_Fragment_heading"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
-    <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieReviewFragment"
-        android:id="@+id/movie_reviews"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        <fragment android:name="com.popularmovie.android.appprotfolio.popularmovie.MovieReviewFragment"
+            android:id="@+id/movie_reviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </ScrollView>
