--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -8,5 +8,5 @@
         android:id="@+id/listview_review"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null" />
+        android:divider="?android:attr/listDivider" />
 </LinearLayout>
